<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login">Log in</string>
    <string name="already_have_an_account">Already have an account? <font color='#254FE6'>Log in</font></string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
</resources>