<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout style="@style/FillingForm.WrapContent.WidthMatchP.Container">

        <TextView
            style="@style/FillingForm.WrapContent.TitleTextForm"
            android:text="@string/welcome_back"
            android:textAppearance="@style/Headline1TextAppearanceSemiBold"
            android:textColor="@color/purple_900" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            style="@style/FillingForm.WrapContent.WidthMatchP.Content"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/auth_edit_text_height"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            style="@style/FillingForm.WrapContent.WidthMatchP.Content"
            app:endIconDrawable="@drawable/password_toggle"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/auth_edit_text_height"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_in"
            style="@style/FillingForm.WrapContent.WidthMatchP.Content"
            android:text="@string/login" />

    </LinearLayout>


</ScrollView>